Fixar så endpoint kan nås.